[tool.poetry]
name = "findsub"
version = "0.7.2"
description = "Finding and ranking subtitles from subscene by how much they are synced."
authors = ["Mahyar Mahdavi <Mahyar@Mahyar24.com>"]
license = "GPLv3"
homepage = "https://github.com/mahyar24/FindSub/"
repository = "https://github.com/mahyar24/FindSub/"
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.7.1"
beautifulsoup4 = "^4.10.0"
srt = "^3.5.0"
webrtcvad = "^2.0.10"
IMDbPY = "^2021.4.18"
tqdm = "^4.62.3"
setuptools = "^59.6.0"
wheel = "^0.37.0"
Cython = "^0.29.26"
cloudscraper = "^1.2.60"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.920"
pylint = "^2.12.2"
isort = "^5.10.1"

[tool.poetry.scripts]
findsub = "findsub.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"
